syntax = "proto3";

option java_package = "model.proto";
option java_multiple_files = true;

message Name {

    string first_name = 1;

    string middle_name = 2;

    string last_name = 3;
}